[package]
name = "cineplex"
version = "0.1.1"
edition = "2024"

[dependencies]
iced = { version = "0.13.1", features = ["image"] }
image = "0.25"
iced_video_player = { git = "https://github.com/jazzfool/iced_video_player.git", branch = "master" }
url = "2.5.7"
tokio = { version = "1", features = ["rt", "process"] }
tempfile = "3"
rfd = "0.12"
serde_json = "1"
log = "0.4"
env_logger = "0.11"
