[package]
name = "cineplex"
version = "0.1.1"
edition = "2024"

[dependencies]
iced = { version = "0.14", features = ["image", "tokio"] }
image = "0.25"
iced_video_player = { path = "../iced_video_player" }
url = "2.5.7"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tempfile = "3"
rfd = "0.12"
serde_json = "1"
log = "0.4"
env_logger = "0.11"
libheif-rs = { version = "2", features = ["image"] }
gstreamer = "0.23"
gstreamer-app = "0.23"

[profile.release]
debug = true
